k8s/voile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voile
  namespace: voile
spec:
  type: ClusterIP
  selector:
    app: voile
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
